Fix layout problems

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -8,7 +8,7 @@
 .FooterSection {
     padding: 1.875rem 0.25rem;
     width: 25rem;
-    max-width: 33%;
+    max-width: 30%;
     display: inline-block;
 }
 
